@@ -509,6 +509,29 @@ abstract class ApiBase {
 		wfDebugDieBacktrace("Internal error in $method: $message");
 	}
 
+	private $mRawFormat = false;
+
+	/**
+	 * Returns if module supports raw mode
+	 */
+	public function supportRaw() {
+		return false;
+	}
+
+	/**
+	 * Enables raw mode
+	 */
+	public function setRaw() {
+		$this->mRawFormat = true;
+	}
+
+	/**
+	 * Checks if raw mode is enabled
+	 */
+	public function isRaw() {
+		return $this->mRawFormat;
+	}
+
 	/**
 	 * Profiling: total module execution time
 	 */
@@ -616,4 +639,5 @@ abstract class ApiBase {
 		return __CLASS__ . ': $Id$';
 	}
 }
+
 
