@@ -187,6 +187,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * (bug 11562) Added a user_registration parameter/field to the list=allusers query.
 * (bug 11588) Preserve document structure for empty dataset in backlinks query.
 * Outputting list of all user preferences rather than having to request them by name
+* Add raw formatting support. Now several actions like expandtemplates support raw output with format=raw
 
 === Languages updated in 1.12 ===
 
